# steward

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  pyproject.toml
assets/: index-B0RStz4q.js  index-B5iiElBK.css
dashboard/: .env.production  README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/public/: sample-snapshot.json
dashboard/src/: App.tsx  api.ts  index.css  types.ts
dashboard/src/components/: AgentPanel.tsx  BillChart.test.tsx  BillChart.tsx  PlanTable.test.tsx  PlanTable.tsx  ResourceTable.tsx  RunLog.tsx  ui.tsx
deploy/: README.md  s.yaml
deploy/fc/: requirements.txt  s.yaml
scripts/: deploy_oss_site.py  export_sample_snapshot.py  seed_sandbox.py  smoke_alibaba.py  smoke_qwen.py  teardown_sandbox.py
src/steward/: __init__.py  cli.py  config.py  demo_seed.py  executor.py  models.py  planner.py  policy.py  report.py  snapshot.py  testing.py
tests/: test_alibaba_config.py  test_alibaba_cost.py  test_alibaba_ecs.py  test_alibaba_metrics.py  test_alibaba_oss.py  test_alibaba_provider.py  test_alibaba_util.py  test_alibaba_vpc.py  test_api_agent.py  test_api_scan_plan.py  test_api_spa.py  test_api_stream.py  test_cli.py  test_config.py  test_demo_seed.py  test_detectors_ecs.py  test_detectors_eip.py  test_detectors_oss.py  test_detectors_storage.py  test_executor.py  test_live_alibaba.py  test_live_qwen.py  test_llm_agent.py  test_llm_client.py  test_llm_tools.py  test_mock_provider.py  test_models.py  test_planner.py  test_policy.py  test_report.py  test_snapshot.py
(+24 files in other folders)
