[project]
name = "steward"
version = "0.1.0"
description = "Autonomous FinOps agent for Alibaba Cloud: find waste, fix it under policy gates, roll back safely."
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7",
    "openai>=1.40",
    "alibabacloud_ecs20140526>=7.0",
    "alibabacloud_vpc20160428>=7.0",
    "alibabacloud_cms20190101>=4.0",
    "alibabacloud_bssopenapi20171214>=5.0",
    "oss2>=2.18",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29", "httpx>=0.27"]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
steward = "steward.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steward"]

[tool.pytest.ini_options]
testpaths = ["tests"]
